# fcube

./: .gitignore  AT_A_GLANCE.md  IMPROVEMENTS_SUMMARY.md  INSTALL_AND_PUBLISH.md  LICENSE  PLUGIN_IMPROVEMENTS.md  PLUGIN_QUICK_REFERENCE.md  QUICK_REFERENCE.md  README.md  __init__.py  __main__.py  cli.py  pyproject.toml
.github/workflows/: docs.yml
commands/: __init__.py  addentity.py  addplugin.py  adduser.py  listmodules.py  startmodule.py  startproject.py
docs/: mkdocs.yml  requirements.txt
docs/docs/: FRONTEND_LLM_PROMPT.md  ai-prompt.md  index.md
docs/docs/fcube/: architecture.md  commands.md  contributing.md  getting-started.md  index.md  plugins.md
docs/docs/guides/: code-review.md  git-workflow.md  index.md  onboarding.md
docs/docs/principles/: architecture.md  index.md
docs/docs/standards/: FRONTEND_ARCHITECTURE_GUIDE_V2.md  project-structure.md
docs/docs/stylesheets/: extra.css
docs/overrides/: main.html
docs/site/: 404.html  index.html  sitemap.xml
my_web_site/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  fcube.py  pyproject.toml
my_web_site/docker/: Dockerfile  celery-worker-entrypoint.sh  docker-entrypoint.sh  flower-entrypoint.sh
my_web_site/migrations/: env.py
templates/: __init__.py  crud_templates.py  model_templates.py  module_templates.py  route_templates.py  schema_templates.py  service_templates.py
templates/plugins/: __init__.py
templates/project/: __init__.py  api_templates.py  core_templates.py  infra_templates.py  user_templates.py
utils/: __init__.py  helpers.py
(+102 files in other folders)
