[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fcube"
version = "1.0.0"
description = "Modern FastAPI Project & Module Generator"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Korab Development Team", email = "dev@korab.com" },
]
keywords = ["fastapi", "generator", "cli", "architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
fcube = "fcube.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]
